Elevation Correction - Fix for waiting throbber that was displaying behind elevation graph.

--- a/app/scss/_elevationCorrection.scss
+++ b/app/scss/_elevationCorrection.scss
@@ -24,6 +24,10 @@
         height:235px !important;
         margin: 30px 0 0 30px;
         float: left;
+        
+        &.waiting:before {
+            z-index:107;
+        }
     }
 
     .elevationStats
